<resources>
    <string name="app_name">Proyecto final</string>
    <string name="action_settings">Settings</string>
    <string name="LoginActivityTitle">Login</string>
    <string name="fragment_login_email_label">Correo electrónico</string>
    <string name="fragment_login_password_label">Contraseña</string>
    <string name="fragment_sign_in">Iniciar sesión</string>
    <string name="fragment_sign_up_username">Nombre</string>
    <string name="fragment_sign_up_email">Correo electrónico</string>
    <string name="fragment_sign_up_password">Contraseña</string>
    <string name="fragment_sign_up_confirm_password">Confirmar contraseña</string>
    <string name="fragment_sign_up_sign_up_label">Registrarme</string>
    <string name="activity_login_incorrect_password">La contraseña no coincide con el patron, debe contener al menos 6 caracteres</string>
    <string name="dialog_default_title">Proyect Final</string>
    <string name="activity_login_data_error">Hay algun error con los datos</string>
    <string name="fragment_login_progress_dialog_label">Iniciando sesión…Por favor espere</string>
    <string name="activity_login_incorrect_email">El email no tiene un formato correcto</string>
    <string name="fragment_sign_up_mismatch_passwords">Las contraseñas no coinciden</string>
    <string name="fragment_sign_up_progress_dialog_label">Registrando…Por favor espere</string>
    <string name="fragment_sign_up_incorrect_username">El campo nombre no puede estar vacio</string>
    <string name="activity_login_sign_in_label">Iniciar sesión</string>
    <string name="activity_login_sign_up_label">Registrar usuario</string>
    <string name="app_author">migue300995@gmail.com</string>
    <string name="activity_main_drawer_menu_settings_label">Opciones</string>
    <string name="activity_main_drawer_menu_about_label">Acerca de…</string>
    <string name="activity_main_drawer_menu_close_session_label">Cerrar sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fragment_sign_up_birth_date_label">Fecha de nacimiento</string>
    <string name="fragment_sign_up_genre_label">Genero</string>
    <string name="fragment_tic_tac_toe_user_starts_label">Iniciar con X</string>
    <string name="fragment_tic_tac_toe_machine_starts_label">Maquina inicia con X</string>
    <string name="fragment_tic_tac_toe_restart_label">Reinicar</string>
    <string name="fragment_tic_tac_toe_start_label">Iniciar juego</string>
    <string name="about_app">Esta app fue desarrollada por Miguel Angel López Arcos</string>
    <string name="main_activity_close_session_confirmation">¿Estás seguro de que deseas cerrar tu sesión?</string>
    <string name="positive_button_label">Si</string>
    <string name="negative_button_label">No</string>
    <string name="fragment_routine_list_empty_label">No hay datos de tus rutinas aun</string>
    <string name="routine_list_fragment_label">Mi Rutina</string>
    <string name="fragment_tic_tac_toe_score_label">Historico de puntajes</string>
    <string name="drawer_menu_exterior_entertainment_label">Entretenimiento al exterior</string>
    <string name="drawer_menu_interior_entertainment_label">Entretenimiento en el interior</string>
    <string name="fragment_weather_places_label">Lugares de acuerdo al clima</string>
    <string name="fragment_near_places_label">Lugares cercanos</string>
    <string name="fragment_tic_tac_toe_label">Juego del gato</string>
    <string name="fragment_tv_shows_label">Shows de televisión</string>
    <string name="tic_tac_toe_fragment_player_turn_label">Tu turno</string>
    <string name="tic_tac_toe_fragment_computer_turn_label">Turno de la maquina</string>
    <string name="tic_tac_toe_fragment_win_message">Has ganado el juego :)</string>
    <string name="tic_tac_toe_fragment_tie_message">Es un empate</string>
    <string name="tic_tac_toe_fragment_lost_message">La maquina gano el juego</string>
</resources>
