<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/it1"
            android:title="Something" />
        <item
            android:id="@+id/it2"
            android:title="Something 2" />
        <item
            android:id="@+id/it3"
            android:title="Something 2" />
        <item
            android:id="@+id/it4"
            android:title="Something 2" />
    </group>

    <item android:title="@string/activity_main_drawer_menu_settings_label">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_grey"
                android:title="@string/activity_main_drawer_menu_about_label" />
            <item
                android:id="@+id/close_session"
                android:icon="@drawable/ic_exit_to_app_grey"
                android:title="@string/activity_main_drawer_menu_close_session_label" />
        </menu>
    </item>

</menu>